--- a/app/src/main/res/layout/activity_section_f5_s3.xml
+++ b/app/src/main/res/layout/activity_section_f5_s3.xml
@@ -114,8 +114,8 @@
                         android:text="@={form.f5301}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -159,8 +159,8 @@
                         android:text="@={form.f5302}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -204,8 +204,8 @@
                         android:text="@={form.f5303}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -249,8 +249,8 @@
                         android:text="@={form.f5304}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -294,8 +294,8 @@
                         android:text="@={form.f5305}"
 
 
-                        app:minValue="1"
                         app:maxValue="100"
+                        app:minValue="1"
                         app:type="range" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -390,7 +390,8 @@
             <!-- f5307  Radio   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5307"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5306.equals(`1`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -930,7 +931,8 @@
             <!-- f5315  CheckBox   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5315"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5314.equals(`1`)? View.VISIBLE : View.GONE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -968,6 +970,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315a.equals(`1`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315a(form.f5315a.equals(`1`)?``:`1`)}"
                             android:text="@string/f5315a" />
 
@@ -976,6 +979,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315b.equals(`2`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315b(form.f5315b.equals(`2`)?``:`2`)}"
                             android:text="@string/f5315b" />
 
@@ -984,6 +988,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315c.equals(`3`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315c(form.f5315c.equals(`3`)?``:`3`)}"
                             android:text="@string/f5315c" />
 
@@ -992,6 +997,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315d.equals(`4`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315d(form.f5315d.equals(`4`)?``:`4`)}"
                             android:text="@string/f5315d" />
 
@@ -1000,6 +1006,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315e.equals(`5`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315e(form.f5315e.equals(`5`)?``:`5`)}"
                             android:text="@string/f5315e" />
 
@@ -1008,6 +1015,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f5315f.equals(`6`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF5315f(form.f5315f.equals(`6`)?``:`6`)}"
                             android:text="@string/f5315f" />
 
@@ -1024,6 +1032,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f531596.equals(`96`)}"
+                            android:enabled="@{!form.f531598.equals(`98`)}"
                             android:onClick="@{()->form.setF531596(form.f531596.equals(`96`)?``:`96`)}"
                             android:text="@string/f531596" />
 
@@ -1293,7 +1302,8 @@
             <!-- f5319  CheckBox   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5319"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5318.equals(`1`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1477,7 +1487,8 @@
             <!-- f5321  CheckBox   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5321"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5321.equals(`5`)? View.VISIBLE : View.GONE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -1627,7 +1638,8 @@
             <!-- f5323  Radio   -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/fldGrpCVf5323"
-                style="@style/cardView">
+                style="@style/cardView"
+                android:visibility="@{form.f5322.equals(`1`)? View.GONE : View.VISIBLE}">
 
                 <LinearLayout
                     android:layout_width="match_parent"
