--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -12,6 +12,10 @@
                 android:id="@+id/action_database"
                 android:title="@string/action_database" />
             <item
+                android:id="@+id/debugDB"
+                android:title="Open Debug Database"
+                app:showAsAction="collapseActionView" />
+            <item
                 android:id="@+id/onSync"
                 android:title="Sync Data"
                 app:showAsAction="collapseActionView" />
