--- a/app/src/main/res/layout/activity_section_f5_s2.xml
+++ b/app/src/main/res/layout/activity_section_f5_s2.xml
@@ -44,21 +44,11 @@
                 android:orientation="vertical">
 
                 <!-- f5s2title  Title   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVf5s2title"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/f5s2title" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/f5s2title" />
 
                 <TextView
                     style="@style/info"
